...
                                                        <subviews>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C5e-vd-4zF" userLabel="breakfast" customClass="orangeButton" customModule="CalorieCounterApp" customModuleProvider="targ
                                                                <rect key="frame" x="0.0" y="0.0" width="359" height="59.5"/>
                                                                <color key="backgroundColor" red="0.98431372549999996" green="0.69411764710000001" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <state key="normal" title="Add Breakfast"/>
                                                                <connections>
                                                                    <action selector="breakfast_event:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pvn-v6-165"/>
                                                                </connections>
                                                            </button>
                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-sandwich-with-fried-egg-100" translatesAutoresizingMaskIntoConstraints="NO" id="mX7-Oc-2Um" userLabel="IconB">
                                                                <rect key="frame" x="0.0" y="0.0" width="79" height="59.5"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sc4-sO-RVz" secondAttribute="bottomMargin" id="05z-Zb-ASV"/>
                            <constraint firstItem="sc4-sO-RVz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4ow-Et-Iws"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sc4-sO-RVz" secondAttribute="trailing" id="Yas-we-WMr"/>
                            <constraint firstItem="sc4-sO-RVz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jBE-aL-mSW"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="tabBarHome" landscapeImage="tabBarHome" id="b6s-qC-o5J"/>
                    <navigationItem key="navigationItem" id="s3I-WG-ARR"/>
                    <connections>
                        <outlet property="calorieLbl" destination="4T7-Lj-1oC" id="Z5S-s6-JMT"/>
                        <outletCollection property="options" destination="C5e-vd-4zF" collectionClass="NSMutableArray" id="1cB-hd-hlK"/>
                        <outletCollection property="options" destination="JEp-yA-E2d" collectionClass="NSMutableArray" id="xTw-2s-1IO"/>
                        <outletCollection property="options" destination="b4l-HL-G0e" collectionClass="NSMutableArray" id="2hn-1H-IKX"/>
...
                                        <color key="backgroundColor" red="0.98868423699999997" green="0.70770686859999998" blue="0.34490716459999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Jhk-3y-gJ0"/>
                                            <constraint firstAttribute="width" constant="200" id="jxF-dK-R9T"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Futura-CondensedExtraBold" family="Futura" pointSize="17"/>
                                        <state key="normal" title="Add to meal"/>
                                        <connections>
                                            <action selector="add_to_meal_event:" destination="cyQ-YL-IRp" eventType="touchUpInside" id="kk9-Yh-S0t"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
