...
        var stat = false
        mealPageVM.requestCompletionHandler { [weak self] (status,message) in
             guard let self = self else {return}
             
             if(status){
                 Helpers.dismissHUD(view: self.view, isAnimated: true)
                 self.showAlertView(title: "Alert", Message: message)
                 stat = status
             }else{
                 Helpers.dismissHUD(view: self.view, isAnimated: true)
                 self.showAlertView(title: "Alert", Message: message)
                 stat = status
             }
...
        self.caloriesn = self.nutritionD!.nf_calories!
        calories.text = String.init(describing: self.caloriesn)+" KJ"
    }

    func showAlertView(title:String,Message:String){
        let alert = UIAlertController(title: title, message: Message, preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    
}

